user profile - fix width in desktop using invisible block and implement margin on link

--- a/app/styles/_profile.scss
+++ b/app/styles/_profile.scss
@@ -31,10 +31,15 @@
         margin: 18px 2px;
     }
     .profile-lessons {
-         margin: 36px 0px 15px;
+         margin: 15px 0px 15px;
     }
     .profile-lessons-count {
         margin: 15px 0px;
+    }
+    .profile-external-link {
+        i {
+            margin: 15px 0 0;
+        }
     }
 
     .float-rtl {
